--- a/frontend/src/pages/home/home.css
+++ b/frontend/src/pages/home/home.css
@@ -2,22 +2,33 @@
   @apply bg-background text-primary w-full h-[1000px] min-h-screen pt-20;
 }
 .hero_section {
-  @apply w-2/3 h-full container mx-auto px-4 py-4 flex flex-col items-center gap-4;
+  @apply w-2/3 h-full container mx-auto px-4 py-6 flex flex-col items-center justify-start gap-6;
+
+  & .hero_milestone {
+    @apply flex justify-center items-center;
+
+    & > p {
+      @apply px-4 py-2 my-4 rounded-full border text-[#b6b6b6] border-[#3d3d3d] text-sm flex -justify-center items-center gap-2;
+    }
+    & div {
+      @apply w-3 h-3 bg-green-600 rounded-full;
+    }
+  }
 
   & .hero_headContent {
-    @apply flex flex-col gap-14 justify-center items-center text-center;
+    @apply flex flex-col gap-4 justify-center items-center text-center;
 
     & > h1 {
       @apply text-7xl font-bold tracking-tight;
     }
 
     & > p {
-      @apply text-sm font-light tracking-wide;
+      @apply w-3/4 text-sm font-light tracking-wide lowercase;
     }
   }
 
   & .cta {
-    @apply px-4 py-2 rounded-md bg-[#ff724033] text-[#ff7240] border border-orange-800;
+    @apply my-4 px-4 py-2 rounded-md bg-[#ff724033] text-[#ff7240] border border-orange-800;
   }
 
   & .vdo {
